# data-duper

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg  tox.ini
.github/workflows/: ci.yml
docs/: analysis.rst  conf.py  duper.rst  helper.rst  index.rst
docs/_templates/: class.rst
docs/generators/: duper.generator.Category.rst  duper.generator.Constant.rst  duper.generator.Datetime.rst  duper.generator.Numeric.rst  duper.generator.Regex.rst  index.rst
duper/: __init__.py  analysis.py  base.py  helper.py  methods.py
duper/generator/: base.py  category.py  constant.py  quantile.py  regex.py
examples/: power_plants.py
tests/: test_base.py  test_generators.py  test_methods.py
