[metadata]
name = data-duper
version = 0.0.1
author = Kevin Anker
description = Replicate structure of private or protected data for testing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kjanker/data-duper
keywords = duper, data, testing
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = duper
python_requires = >=3.7
